# Accelerated-Color-Lighting-Randomizer

./: CMakeLists.txt  README.md
bench/: run_bench.py
src/: main.cu  utils.h
tools/py_cuda/: randomizer.py
